--- a/index.html
+++ b/index.html
@@ -2,45 +2,60 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>My IGN Clone</title>
+  <title>IGN Clone</title>
   <style>
-    body {
+    * {
+      box-sizing: border-box;
       margin: 0;
+      padding: 0;
+    }
+    body, html {
+      height: 100%;
       font-family: Arial, Helvetica, sans-serif;
       background-color: #f4f4f4;
       color: #222;
+      display: flex;
     }
-    /* 상단 네비게이션 */
-    header {
+
+    /* 왼쪽 사이드바 */
+    .sidebar {
+      width: 250px;
       background-color: #000;
       color: #fff;
-      padding: 15px 30px;
       display: flex;
-      justify-content: space-between;
-      align-items: center;
+      flex-direction: column;
+      overflow-y: auto;
+      padding: 20px;
     }
-    header h1 {
-      margin: 0;
-      font-size: 24px;
+    .sidebar img {
+      width: 150px;
+      margin-bottom: 30px;
     }
-    nav a {
-      color: #fff;
+    .sidebar h3 {
+      margin-bottom: 15px;
+      font-size: 18px;
+    }
+    .sidebar ul {
+      list-style: none;
+      padding: 0;
+    }
+    .sidebar li {
+      margin-bottom: 10px;
+    }
+    .sidebar a {
       text-decoration: none;
-      margin-left: 20px;
+      color: #fff;
       font-size: 14px;
     }
-    nav a:hover {
+    .sidebar a:hover {
       text-decoration: underline;
     }
 
-    /* 메인 컨텐츠 */
-    .container {
-      width: 90%;
-      max-width: 1200px;
-      margin: 20px auto;
-      display: grid;
-      grid-template-columns: 3fr 1fr;
-      gap: 20px;
+    /* 오른쪽 메인 컨텐츠 */
+    .main-content {
+      flex: 1;
+      overflow-y: auto;
+      padding: 20px;
     }
 
     /* 기사 카드 */
@@ -68,83 +83,57 @@
       color: #555;
     }
 
-    /* 사이드바 */
-    .sidebar {
-      background: #fff;
-      padding: 15px;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    .sidebar h3 {
-      margin-top: 0;
-    }
-    .sidebar ul {
-      list-style: none;
-      padding: 0;
-    }
-    .sidebar li {
-      margin-bottom: 10px;
-    }
-    .sidebar a {
-      text-decoration: none;
-      color: #222;
-    }
-    .sidebar a:hover {
-      text-decoration: underline;
-    }
-
     /* 푸터 */
     footer {
       background: #000;
       color: #fff;
       text-align: center;
-      padding: 15px;
-      margin-top: 30px;
+      padding: 10px;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>IGN Clone</h1>
-    <nav>
-      <a href="#">뉴스</a>
-      <a href="#">리뷰</a>
-      <a href="#">가이드</a>
-      <a href="#">비디오</a>
-    </nav>
-  </header>
+  <aside class="sidebar">
+    <img src="images/ign-logo.png" alt="IGN Logo">
+    <h3>인기 기사</h3>
+    <ul>
+      <li><a href="#">인기 기사 1</a></li>
+      <li><a href="#">인기 기사 2</a></li>
+      <li><a href="#">인기 기사 3</a></li>
+      <li><a href="#">인기 기사 4</a></li>
+      <li><a href="#">인기 기사 5</a></li>
+    </ul>
+  </aside>
 
-  <div class="container">
-    <main>
-      <div class="card">
-        <img src="images/game1.png" alt="Game Image">
-        <div class="card-content">
-          <h2>게임 제목 1</h2>
-          <p>이 게임의 간단한 설명이 들어갑니다.</p>
-        </div>
+  <div class="main-content">
+    <div class="card">
+      <img src="images/game1.png" alt="Game Image">
+      <div class="card-content">
+        <h2>게임 제목 1</h2>
+        <p>이 게임의 간단한 설명이 들어갑니다.</p>
       </div>
+    </div>
 
-      <div class="card">
-        <img src="images/game2.png" alt="Game Image">
-        <div class="card-content">
-          <h2>게임 제목 2</h2>
-          <p>이 게임의 간단한 설명이 들어갑니다.</p>
-        </div>
+    <div class="card">
+      <img src="images/game2.png" alt="Game Image">
+      <div class="card-content">
+        <h2>게임 제목 2</h2>
+        <p>이 게임의 간단한 설명이 들어갑니다.</p>
       </div>
-    </main>
+    </div>
 
-    <aside class="sidebar">
-      <h3>인기 기사</h3>
-      <ul>
-        <li><a href="#">인기 기사 1</a></li>
-        <li><a href="#">인기 기사 2</a></li>
-        <li><a href="#">인기 기사 3</a></li>
-      </ul>
-    </aside>
+    <div class="card">
+      <img src="images/game3.png" alt="Game Image">
+      <div class="card-content">
+        <h2>게임 제목 3</h2>
+        <p>이 게임의 간단한 설명이 들어갑니다.</p>
+      </div>
+    </div>
+
+    <footer>
+      <p>© 2025 My IGN Clone</p>
+    </footer>
   </div>
-
-  <footer>
-    <p>© 2025 My IGN Clone</p>
-  </footer>
 </body>
 </html>
