--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>IGN Clone</title>
+  <title>IGN Clone - News</title>
   <style>
     * {
       box-sizing: border-box;
@@ -31,24 +31,27 @@
       width: 150px;
       margin-bottom: 30px;
     }
-    .sidebar h3 {
-      margin-bottom: 15px;
-      font-size: 18px;
-    }
-    .sidebar ul {
+    .sidebar ul.menu {
       list-style: none;
       padding: 0;
     }
-    .sidebar li {
+    .sidebar ul.menu li {
       margin-bottom: 10px;
     }
-    .sidebar a {
-      text-decoration: none;
+    .sidebar ul.menu li a {
+      display: block;
+      padding: 10px 0;
       color: #fff;
+      text-decoration: none;
       font-size: 14px;
+      transition: color 0.2s;
     }
-    .sidebar a:hover {
-      text-decoration: underline;
+    .sidebar ul.menu li a:hover {
+      color: #ff4500; /* IGN 오렌지 느낌 */
+    }
+    .sidebar ul.menu li a.active {
+      color: #ff4500;
+      font-weight: bold;
     }
 
     /* 오른쪽 메인 컨텐츠 */
@@ -96,13 +99,20 @@
 <body>
   <aside class="sidebar">
     <img src="images/ign-logo.png" alt="IGN Logo">
-    <h3>인기 기사</h3>
-    <ul>
-      <li><a href="#">인기 기사 1</a></li>
-      <li><a href="#">인기 기사 2</a></li>
-      <li><a href="#">인기 기사 3</a></li>
-      <li><a href="#">인기 기사 4</a></li>
-      <li><a href="#">인기 기사 5</a></li>
+    <ul class="menu">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Search Reviews</a></li>
+      <li><a href="#" class="active">News</a></li>
+      <li><a href="#">Guides</a></li>
+      <li><a href="#">Interactive Maps</a></li>
+      <li><a href="#">Playlist</a></li>
+      <li><a href="#">Discover</a></li>
+      <li><a href="#">Store</a></li>
+      <li><a href="#">Rewards</a></li>
+      <li><a href="#">Videos</a></li>
+      <li><a href="#">Privacy Policy</a></li>
+      <li><a href="#">Terms of Use</a></li>
+      <li><a href="#">More</a></li>
     </ul>
   </aside>
 
