--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 </head>
 <body>
   <aside class="sidebar">
-    <img src="images/ign-logo.png" alt="IGN Logo">
+    <img src="IGN logo.png" alt="IGN logo">
     <ul class="menu">
       <li><a href="#">Home</a></li>
       <li><a href="#">Search Reviews</a></li>
