--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="card">
       <img src="images/game1.png" alt="Game Image">
       <div class="card-content">
-        <h2>게임 제목 1</h2>
+        <h2>Lone</h2>
         <p>이 게임의 간단한 설명이 들어갑니다.</p>
       </div>
     </div>
