--- a/index.html
+++ b/index.html
@@ -121,7 +121,10 @@
       <img src="images/game1.png" alt="Game Image">
       <div class="card-content">
         <h2>Lone Review</h2>
-        <p>이 게임의 간단한 설명이 들어갑니다.</p>
+        <p>오랫동안 기다려온 플레이데드의 신작 Lone이 드디어 우리 앞에 모습을 드러냈습니다. Inside와 Limbo를 통해 독창적인 비주얼 스토리텔링을 선보였던 플레이데드는 이번 작품에서도 기대를 저버리지 않았습니다. Lone은 플레이데드 특유의 정교한 디테일과 차가운 미학을 이어가면서도, 또 한 번 새로운 감각을 불러일으키는 게임입니다.
+첫인상에서 가장 눈에 띄는 것은 역시 비주얼 디테일입니다. 눈이 소복이 쌓인 설산, 공기 중에 부유하는 미세한 입자, 그리고 차가운 바람 속에서 반짝이는 햇살까지 — 모든 장면은 마치 예술 작품을 감상하는 듯한 완성도를 보여줍니다. 프레임 하나하나가 철저히 계산된 듯 정제되어 있으며, 이는 단순히 ‘게임 그래픽’의 수준을 넘어섰다고 해도 과언이 아닙니다.
+또한 사운드 디자인 역시 깊은 인상을 남깁니다. 기묘하고 스산한 분위기를 자아내는 앰비언스와 실제 환경음을 그대로 옮겨놓은 듯한 폴리 사운드는 플레이어를 설산 속으로 완벽히 끌어들입니다. 발자국이 눈 위에 찍히는 소리, 바람이 귓가를 스치는 잔향은 단순히 배경음을 넘어, 마치 플레이어 자신이 그 세계에 존재하는 듯한 몰입감을 선사합니다.
+게임의 시작은 단순하지만 강렬합니다. 끝없이 펼쳐진 눈 덮인 설산 위, 소년 홀로 서 있는 장면에서 이야기가 시작됩니다. 플레이어는 소년을 움직이며 앞으로 나아가야 하지만, 화면 속 풍경과 사운드가 끊임없이 던지는 불안감과 호기심은 “과연 이 아이는 어디로 가고 있는가?”라는 질문을 자연스레 떠올리게 합니다. 이는 플레이데드가 늘 보여주었던 특유의 내러티브 방식 — 직접적인 설명 없이도 플레이어가 이야기 속 의미를 스스로 찾아내도록 유도하는 — 의 연장선이라 할 수 있습니다.</p>
       </div>
     </div>
 
