--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     <p>첫인상에서 가장 눈에 띄는 것은 역시 비주얼 디테일입니다. 눈이 소복이 쌓인 설산, 공기 중에 부유하는 미세한 입자, 그리고 차가운 바람 속에서 반짝이는 햇살까지 — 모든 장면은 마치 예술 작품을 감상하는 듯한 완성도를 보여줍니다. 프레임 하나하나가 철저히 계산된 듯 정제되어 있으며, 이는 단순히 ‘게임 그래픽’의 수준을 넘어섰다고 해도 과언이 아닙니다.</p>
 
-    <img src="images/climb.jpeg" alt="Climb Scene">
+    <img src="climb.jpeg" alt="Climb Scene">
 
     <p>또한 사운드 디자인 역시 깊은 인상을 남깁니다. 기묘하고 스산한 분위기를 자아내는 앰비언스와 실제 환경음을 그대로 옮겨놓은 듯한 폴리 사운드는 플레이어를 설산 속으로 완벽히 끌어들입니다. 발자국이 눈 위에 찍히는 소리, 바람이 귓가를 스치는 잔향은 단순히 배경음을 넘어, 마치 플레이어 자신이 그 세계에 존재하는 듯한 몰입감을 선사합니다.</p>
 
@@ -152,7 +152,7 @@
 
     <p>소년의 죽음은 이 게임에서 매우 빈번하게 등장합니다. 이는 단순한 패널티가 아니라, 무엇을 해야 하고 무엇을 해서는 안 되는지를 학습하는 장치입니다. Inside에서 그러했듯, Lone 역시 반복적인 실패와 시도를 통해 플레이어가 점진적으로 세계의 규칙을 이해하도록 설계되어 있습니다. 더불어 소년의 죽음을 묘사하는 애니메이션은 놀라울 정도로 다채롭고 섬세하여, 비극적 순간조차 하나의 새로운 연출처럼 다가옵니다. 아이러니하게도 이 과정은 플레이어에게 좌절감을 주기보다는 신선한 재미와 긴장감을 불러일으킵니다.</p>
 
-    <img src="images/die1.mp4" alt="Death Scene">
+    <img src="die1.mp4" alt="Death Scene">
 
     <p>소년은 끊임없이 앞으로 나아갑니다. 플레이어는 길을 막는 장애물과 퍼즐을 마주하고, 이를 해결하며 점차 게임의 종착지로 향하게 됩니다. 퍼즐은 단순한 문제 풀이를 넘어, 세계의 구조와 그 안에 숨겨진 의미를 생각하게끔 설계되어 있습니다. 이 과정에서 Lone은 플레이데드가 지닌 특유의 디자인 철학 — 플레이어가 ‘직접 경험을 통해 의미를 찾아내도록 유도하는 것’ — 을 다시 한 번 강렬하게 증명합니다.</p>
 
@@ -162,7 +162,7 @@
 
     <p>이 미스터리한 퍼즐을 풀어나가는 과정은 단순히 엔딩에 도달하기 위한 수단이 아닙니다. 그것은 곧 소년이 직면한 세계의 본질을 탐구하는 여정이며, 플레이어 스스로가 그 의미를 찾아가는 탐험이기도 합니다.</p>
 
-    <img src="images/under.jpeg" alt="Underground Scene">
+    <img src="under.jpeg" alt="Underground Scene">
 
     <p>결국 Lone은 플레이데드가 여전히 무언가를 직접 설명하지 않고도 깊은 이야기를 전할 수 있는 능력을 지녔음을 증명하는 작품입니다. 미니멀리즘을 유지하면서도 깊은 몰입감을 불러일으키는 연출, 죽음을 통해 배워나가는 학습 구조, 그리고 감정을 건드리는 독창적 내러티브. Lone은 플레이데드가 가진 정체성을 가장 순수한 형태로 보여주며, 동시에 앞으로 이들이 어떤 새로운 세계를 만들어낼지 기대하게 만듭니다.</p>
 
