--- a/index.html
+++ b/index.html
@@ -152,7 +152,11 @@
 
     <p>소년의 죽음은 이 게임에서 매우 빈번하게 등장합니다. 이는 단순한 패널티가 아니라, 무엇을 해야 하고 무엇을 해서는 안 되는지를 학습하는 장치입니다. Inside에서 그러했듯, Lone 역시 반복적인 실패와 시도를 통해 플레이어가 점진적으로 세계의 규칙을 이해하도록 설계되어 있습니다. 더불어 소년의 죽음을 묘사하는 애니메이션은 놀라울 정도로 다채롭고 섬세하여, 비극적 순간조차 하나의 새로운 연출처럼 다가옵니다. 아이러니하게도 이 과정은 플레이어에게 좌절감을 주기보다는 신선한 재미와 긴장감을 불러일으킵니다.</p>
 
-    <img src="die1.mp4" alt="Death Scene">
+    <video controls width="100%">
+  <source src="die1.mp4" type="video/mp4">
+  브라우저가 video 태그를 지원하지 않습니다.
+</video>
+
 
     <p>소년은 끊임없이 앞으로 나아갑니다. 플레이어는 길을 막는 장애물과 퍼즐을 마주하고, 이를 해결하며 점차 게임의 종착지로 향하게 됩니다. 퍼즐은 단순한 문제 풀이를 넘어, 세계의 구조와 그 안에 숨겨진 의미를 생각하게끔 설계되어 있습니다. 이 과정에서 Lone은 플레이데드가 지닌 특유의 디자인 철학 — 플레이어가 ‘직접 경험을 통해 의미를 찾아내도록 유도하는 것’ — 을 다시 한 번 강렬하게 증명합니다.</p>
 
