--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
 
   <aside class="rightbar">
     <h3>Sponsored</h3>
-    <img src="images/ad1.png" alt="Ad 1">
-    <img src="images/ad2.png" alt="Ad 2">
-    <img src="images/ad3.png" alt="Ad 3">
+    <img src="ad1.png" alt="Ad 1">
+    <img src="ad2.png" alt="Ad 2">
+    <img src="ad3.png" alt="Ad 3">
   </aside>
 </body>
 </html>
