--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <p>결국 Lone은 플레이데드가 여전히 무언가를 직접 설명하지 않고도 깊은 이야기를 전할 수 있는 능력을 지녔음을 증명하는 작품입니다. 미니멀리즘을 유지하면서도 깊은 몰입감을 불러일으키는 연출, 죽음을 통해 배워나가는 학습 구조, 그리고 감정을 건드리는 독창적 내러티브. Lone은 플레이데드가 가진 정체성을 가장 순수한 형태로 보여주며, 동시에 앞으로 이들이 어떤 새로운 세계를 만들어낼지 기대하게 만듭니다.</p>
 
     <footer>
-      <p>© 2025 My IGN Clone</p>
+      <p>© Benjamin Miller 지음 / Ji-eun Lee 번역 / 업데이트 : 2025년 09월 12일 오전 1시 37분 / 게시일 : 2025년 09월 111일 오후 3시 40분</p>
     </footer>
   </div>
 
