--- a/index.html
+++ b/index.html
@@ -180,8 +180,9 @@
   <aside class="rightbar">
     <h3>Sponsored</h3>
     <img src="ad1.png" alt="Ad 1">
-    <img src="ad2.png" alt="Ad 2">
-    <img src="ad3.png" alt="Ad 3">
+    <img src="ad2.jpg" alt="Ad 2">
+    <img src="ad3.jpg" alt="Ad 3">
+    <img src="ad4.jpg" alt="Ad 4">
   </aside>
 </body>
 </html>
