--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
     <p>이 미스터리한 퍼즐을 풀어나가는 과정은 단순히 엔딩에 도달하기 위한 수단이 아닙니다. 그것은 곧 소년이 직면한 세계의 본질을 탐구하는 여정이며, 플레이어 스스로가 그 의미를 찾아가는 탐험이기도 합니다.</p>
 
-    <img src="under.jpg" alt="Underground Scene">
+    <img src="under.jpeg" alt="Underground Scene">
 
     <p>결국 Lone은 플레이데드가 여전히 무언가를 직접 설명하지 않고도 깊은 이야기를 전할 수 있는 능력을 지녔음을 증명하는 작품입니다. 미니멀리즘을 유지하면서도 깊은 몰입감을 불러일으키는 연출, 죽음을 통해 배워나가는 학습 구조, 그리고 감정을 건드리는 독창적 내러티브. Lone은 플레이데드가 가진 정체성을 가장 순수한 형태로 보여주며, 동시에 앞으로 이들이 어떤 새로운 세계를 만들어낼지 기대하게 만듭니다.</p>
 
