--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       background-color: #f4f4f4;
       color: #222;
       display: flex;
+      overflow-y: auto; /* 전체 스크롤 */
     }
 
     /* 왼쪽 사이드바 */
@@ -25,7 +26,6 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      overflow-y: auto;
       padding: 20px;
     }
     .sidebar img {
@@ -65,7 +65,6 @@
       width: 300px;
       background-color: #eaeaea;
       padding: 20px;
-      overflow-y: auto;
     }
     .rightbar h3 {
       margin-bottom: 15px;
@@ -75,38 +74,33 @@
       margin-bottom: 20px;
     }
 
-    /* 메인 컨텐츠 */
+    /* 메인 콘텐츠 */
     .main-content {
       flex: 1;
-      overflow-y: auto;
       padding: 40px;
     }
     .main-content h1 {
-      font-size: 48px; /* 전체 제목 */
+      font-size: 48px; /* 전체 제목 Lone Review */
       font-weight: bold;
       margin-bottom: 30px;
       line-height: 1.2;
+    }
+    .main-content h2 {
+      font-size: 32px; /* 소주제 */
+      font-weight: bold;
+      margin: 40px 0 20px; /* 위쪽 여백 확보 */
     }
     .main-content p {
       font-size: 16px;
       line-height: 1.7;
       margin-bottom: 20px;
     }
-    .main-content img,
-    .main-content video {
+    .main-content img, .main-content video {
       width: 100%;
       margin: 20px 0;
     }
 
-    /* 소주제 스타일 */
-    .main-content .subtopic {
-      font-size: 28px; /* 본문보다 크고, 전체 제목보다는 작게 */
-      font-weight: bold;
-      margin-top: 50px; /* 위 여백 */
-      margin-bottom: 20px; /* 아래 여백 */
-      line-height: 1.4;
-    }
-
+    /* 푸터 */
     footer {
       background: #000;
       color: #fff;
@@ -117,6 +111,7 @@
   </style>
 </head>
 <body>
+  <!-- 왼쪽 사이드바 -->
   <aside class="sidebar">
     <img src="ignlogo.png" alt="ignlogo">
     <ul class="menu">
@@ -136,6 +131,7 @@
     </ul>
   </aside>
 
+  <!-- 메인 콘텐츠 -->
   <div class="main-content">
     <h1>Lone Review</h1>
 
@@ -149,20 +145,20 @@
 
     <p>게임의 시작은 단순하지만 강렬합니다. 끝없이 펼쳐진 눈 덮인 설산 위, 소년 홀로 서 있는 장면에서 이야기가 시작됩니다. 플레이어는 소년을 움직이며 앞으로 나아가야 하지만, 화면 속 풍경과 사운드가 끊임없이 던지는 불안감과 호기심은 “과연 이 아이는 어디로 가고 있는가?”라는 질문을 자연스레 떠올리게 합니다. 이는 플레이데드가 늘 보여주었던 특유의 내러티브 방식 — 직접적인 설명 없이도 플레이어가 이야기 속 의미를 스스로 찾아내도록 유도하는 — 의 연장선이라 할 수 있습니다.</p>
 
-    <p class="subtopic">[ 마찬가지로 아무런 지시사항이 없습니다. ]</p>
+    <h2>[ 마찬가지로 아무런 지시사항이 없습니다. ]</h2>
 
     <p>Lone에는 별도의 게임 설명이나 내러티브 가이드가 존재하지 않습니다. 플레이어가 처음 마주하는 것은 단지 방향키와 스페이스바 사용법뿐입니다. 그 외의 모든 것은 직접 부딪히고 실패하면서 깨달아야 합니다. 이러한 접근은 플레이데드의 정체성과도 맞닿아 있으며, 플레이어가 단순한 관찰자가 아니라 ‘탐험자’로 자리하도록 만듭니다.</p>
 
     <p>소년의 죽음은 이 게임에서 매우 빈번하게 등장합니다. 이는 단순한 패널티가 아니라, 무엇을 해야 하고 무엇을 해서는 안 되는지를 학습하는 장치입니다. Inside에서 그러했듯, Lone 역시 반복적인 실패와 시도를 통해 플레이어가 점진적으로 세계의 규칙을 이해하도록 설계되어 있습니다. 더불어 소년의 죽음을 묘사하는 애니메이션은 놀라울 정도로 다채롭고 섬세하여, 비극적 순간조차 하나의 새로운 연출처럼 다가옵니다. 아이러니하게도 이 과정은 플레이어에게 좌절감을 주기보다는 신선한 재미와 긴장감을 불러일으킵니다.</p>
 
-    <video controls>
+    <video controls width="100%">
       <source src="die1.mp4" type="video/mp4">
       브라우저가 video 태그를 지원하지 않습니다.
     </video>
 
     <p>소년은 끊임없이 앞으로 나아갑니다. 플레이어는 길을 막는 장애물과 퍼즐을 마주하고, 이를 해결하며 점차 게임의 종착지로 향하게 됩니다. 퍼즐은 단순한 문제 풀이를 넘어, 세계의 구조와 그 안에 숨겨진 의미를 생각하게끔 설계되어 있습니다. 이 과정에서 Lone은 플레이데드가 지닌 특유의 디자인 철학 — 플레이어가 ‘직접 경험을 통해 의미를 찾아내도록 유도하는 것’ — 을 다시 한 번 강렬하게 증명합니다.</p>
 
-    <p class="subtopic">[ 외롭고, 고독하게, 앞으로 나아가며 ]</p>
+    <h2>[ 외롭고, 고독하게, 앞으로 나아가며 ]</h2>
 
     <p>소년은 설산을 오르며 매순간 위험에 직면합니다. 커다란 물체들이 한순간에 폭발하고, 예상치 못한 위협들이 끊임없이 소년의 길을 가로막습니다. Lone은 단순히 퍼즐과 도전을 넘어, 이 외로운 소년의 심리 상태를 섬세하게 담아냅니다. 플레이어는 게임을 진행하며 단순한 재미를 넘어, 고독과 불안, 그리고 그 속에서 피어나는 희미한 희망 같은 감정적 울림을 함께 경험하게 됩니다.</p>
 
@@ -173,15 +169,16 @@
     <p>결국 Lone은 플레이데드가 여전히 무언가를 직접 설명하지 않고도 깊은 이야기를 전할 수 있는 능력을 지녔음을 증명하는 작품입니다. 미니멀리즘을 유지하면서도 깊은 몰입감을 불러일으키는 연출, 죽음을 통해 배워나가는 학습 구조, 그리고 감정을 건드리는 독창적 내러티브. Lone은 플레이데드가 가진 정체성을 가장 순수한 형태로 보여주며, 동시에 앞으로 이들이 어떤 새로운 세계를 만들어낼지 기대하게 만듭니다.</p>
 
     <footer>
-      <p>Benjamin Miller 지음 / Ji-eun Lee 번역 / 업데이트 : 2025년 09월 12일 오전 1시 37분 / 게시일 : 2025년 09월 111일 오후 3시 40분</p>
+      <p>© 2025 My IGN Clone</p>
     </footer>
   </div>
 
+  <!-- 오른쪽 사이드바 -->
   <aside class="rightbar">
     <h3>Sponsored</h3>
     <img src="ad1.png" alt="Ad 1">
-    <img src="ad2.jpg" alt="Ad 2">
     <img src="ad3.jpg" alt="Ad 3">
+    <img src="ad2.jpg" alt="Ad 2">
     <img src="ad4.jpg" alt="Ad 4">
   </aside>
 </body>
