--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       background-color: #f4f4f4;
       color: #222;
       display: flex;
-      overflow-y: auto; /* 전체 스크롤 */
+      overflow: hidden; /* 전체 스크롤 제거 */
     }
 
     /* 왼쪽 사이드바 */
@@ -27,6 +27,11 @@
       flex-direction: column;
       align-items: center;
       padding: 20px;
+      position: fixed;  /* 화면에 고정 */
+      top: 0;
+      left: 0;
+      bottom: 0;
+      overflow-y: auto; /* 메뉴 많으면 스크롤 가능 */
     }
     .sidebar img {
       width: 150px;
@@ -49,12 +54,10 @@
       color: #fff;
       text-decoration: none;
       font-size: 14px;
-      transition: color 0.2s;
       text-align: center;
+      transition: color 0.2s;
     }
-    .sidebar ul.menu li a:hover {
-      color: #ff4500;
-    }
+    .sidebar ul.menu li a:hover,
     .sidebar ul.menu li a.active {
       color: #ff4500;
       font-weight: bold;
@@ -65,6 +68,11 @@
       width: 300px;
       background-color: #eaeaea;
       padding: 20px;
+      position: fixed; /* 화면에 고정 */
+      top: 0;
+      right: 0;
+      bottom: 0;
+      overflow-y: auto; /* 광고 많으면 스크롤 가능 */
     }
     .rightbar h3 {
       margin-bottom: 15px;
@@ -76,8 +84,11 @@
 
     /* 메인 콘텐츠 */
     .main-content {
-      flex: 1;
+      margin-left: 250px;  /* 왼쪽 사이드바 공간 확보 */
+      margin-right: 300px; /* 오른쪽 사이드바 공간 확보 */
       padding: 40px;
+      height: 100vh;        /* 화면 높이 */
+      overflow-y: auto;     /* 메인 콘텐츠만 스크롤 */
     }
     .main-content h1 {
       font-size: 48px; /* 전체 제목 Lone Review */
@@ -86,9 +97,9 @@
       line-height: 1.2;
     }
     .main-content h2 {
-      font-size: 32px; /* 소주제 */
+      font-size: 36px; /* 소주제 제목, 본문보다 훨씬 큼 */
       font-weight: bold;
-      margin: 40px 0 20px; /* 위쪽 여백 확보 */
+      margin: 60px 0 30px; /* 위쪽 여백 넉넉히 */
     }
     .main-content p {
       font-size: 16px;
