--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       background-color: #f4f4f4;
       color: #222;
       display: flex;
-      overflow: hidden; /* 전체 스크롤 제거 */
+      overflow: hidden; /* 전체 스크롤 제거, 메인만 스크롤 */
     }
 
     /* 왼쪽 사이드바 */
@@ -27,11 +27,10 @@
       flex-direction: column;
       align-items: center;
       padding: 20px;
-      position: fixed;  /* 화면에 고정 */
-      top: 0;
+      position: fixed;
       left: 0;
+      top: 0;
       bottom: 0;
-      overflow-y: auto; /* 메뉴 많으면 스크롤 가능 */
     }
     .sidebar img {
       width: 150px;
@@ -54,10 +53,12 @@
       color: #fff;
       text-decoration: none;
       font-size: 14px;
-      text-align: center;
       transition: color 0.2s;
+      text-align: center;
     }
-    .sidebar ul.menu li a:hover,
+    .sidebar ul.menu li a:hover {
+      color: #ff4500;
+    }
     .sidebar ul.menu li a.active {
       color: #ff4500;
       font-weight: bold;
@@ -68,11 +69,10 @@
       width: 300px;
       background-color: #eaeaea;
       padding: 20px;
-      position: fixed; /* 화면에 고정 */
-      top: 0;
+      position: fixed;
       right: 0;
+      top: 0;
       bottom: 0;
-      overflow-y: auto; /* 광고 많으면 스크롤 가능 */
     }
     .rightbar h3 {
       margin-bottom: 15px;
@@ -84,22 +84,23 @@
 
     /* 메인 콘텐츠 */
     .main-content {
-      margin-left: 250px;  /* 왼쪽 사이드바 공간 확보 */
-      margin-right: 300px; /* 오른쪽 사이드바 공간 확보 */
+      flex: 1;
+      margin-left: 250px;
+      margin-right: 300px;
       padding: 40px;
-      height: 100vh;        /* 화면 높이 */
-      overflow-y: auto;     /* 메인 콘텐츠만 스크롤 */
+      height: 100%;
+      overflow-y: auto; /* 메인만 스크롤 */
     }
     .main-content h1 {
-      font-size: 48px; /* 전체 제목 Lone Review */
+      font-size: 48px; /* 전체 제목 */
       font-weight: bold;
       margin-bottom: 30px;
       line-height: 1.2;
     }
     .main-content h2 {
-      font-size: 36px; /* 소주제 제목, 본문보다 훨씬 큼 */
+      font-size: 32px; /* 소주제 */
       font-weight: bold;
-      margin: 60px 0 30px; /* 위쪽 여백 넉넉히 */
+      margin: 60px 0 20px; /* 위쪽 여백 확보 */
     }
     .main-content p {
       font-size: 16px;
@@ -114,10 +115,22 @@
     /* 푸터 */
     footer {
       background: #000;
+      padding: 20px 10px;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 40px;
+    }
+    footer .footer-info {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+    }
+    footer .footer-info span {
       color: #fff;
-      text-align: center;
-      padding: 10px;
-      margin-top: 20px;
+      font-size: 14px;
     }
   </style>
 </head>
@@ -160,8 +173,6 @@
 
     <p>Lone에는 별도의 게임 설명이나 내러티브 가이드가 존재하지 않습니다. 플레이어가 처음 마주하는 것은 단지 방향키와 스페이스바 사용법뿐입니다. 그 외의 모든 것은 직접 부딪히고 실패하면서 깨달아야 합니다. 이러한 접근은 플레이데드의 정체성과도 맞닿아 있으며, 플레이어가 단순한 관찰자가 아니라 ‘탐험자’로 자리하도록 만듭니다.</p>
 
-    <p>소년의 죽음은 이 게임에서 매우 빈번하게 등장합니다. 이는 단순한 패널티가 아니라, 무엇을 해야 하고 무엇을 해서는 안 되는지를 학습하는 장치입니다. Inside에서 그러했듯, Lone 역시 반복적인 실패와 시도를 통해 플레이어가 점진적으로 세계의 규칙을 이해하도록 설계되어 있습니다. 더불어 소년의 죽음을 묘사하는 애니메이션은 놀라울 정도로 다채롭고 섬세하여, 비극적 순간조차 하나의 새로운 연출처럼 다가옵니다. 아이러니하게도 이 과정은 플레이어에게 좌절감을 주기보다는 신선한 재미와 긴장감을 불러일으킵니다.</p>
-
     <video controls width="100%">
       <source src="die1.mp4" type="video/mp4">
       브라우저가 video 태그를 지원하지 않습니다.
@@ -173,14 +184,18 @@
 
     <p>소년은 설산을 오르며 매순간 위험에 직면합니다. 커다란 물체들이 한순간에 폭발하고, 예상치 못한 위협들이 끊임없이 소년의 길을 가로막습니다. Lone은 단순히 퍼즐과 도전을 넘어, 이 외로운 소년의 심리 상태를 섬세하게 담아냅니다. 플레이어는 게임을 진행하며 단순한 재미를 넘어, 고독과 불안, 그리고 그 속에서 피어나는 희미한 희망 같은 감정적 울림을 함께 경험하게 됩니다.</p>
 
-    <p>이 미스터리한 퍼즐을 풀어나가는 과정은 단순히 엔딩에 도달하기 위한 수단이 아닙니다. 그것은 곧 소년이 직면한 세계의 본질을 탐구하는 여정이며, 플레이어 스스로가 그 의미를 찾아가는 탐험이기도 합니다.</p>
-
     <img src="under.jpeg" alt="Underground Scene">
 
     <p>결국 Lone은 플레이데드가 여전히 무언가를 직접 설명하지 않고도 깊은 이야기를 전할 수 있는 능력을 지녔음을 증명하는 작품입니다. 미니멀리즘을 유지하면서도 깊은 몰입감을 불러일으키는 연출, 죽음을 통해 배워나가는 학습 구조, 그리고 감정을 건드리는 독창적 내러티브. Lone은 플레이데드가 가진 정체성을 가장 순수한 형태로 보여주며, 동시에 앞으로 이들이 어떤 새로운 세계를 만들어낼지 기대하게 만듭니다.</p>
 
+    <!-- IGN 스타일 푸터 -->
     <footer>
-      <p>Benjamin Miller 지음 / Ji-eun Lee 번역 / 업데이트 : 2025년 09월 12일 오전 1시 37분 / 게시일 : 2025년 09월 111일 오후 3시 40분</p>
+      <div class="footer-info">
+        <span>Benjamin Miller 지음</span>
+        <span>| Ji-eun Lee 번역</span>
+        <span>| 업데이트 : 2025년 09월 12일 오전 1시 37분</span>
+        <span>| 게시일 : 2025년 09월 11일 오후 3시 40분</span>
+      </div>
     </footer>
   </div>
 
