--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>IGN Clone - News</title>
+  <title>lone teaser trailer review</title>
   <style>
     * {
       box-sizing: border-box;
