--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
   <!-- 메인 콘텐츠 -->
   <div class="main-content">
-    <h1>Lone Review</h1>
+    <h1>Lone Teaser Trailer Review</h1>
 
     <p>오랫동안 기다려온 플레이데드의 신작 <strong>Lone</strong>이 드디어 우리 앞에 모습을 드러냈습니다. Inside와 Limbo를 통해 독창적인 비주얼 스토리텔링을 선보였던 플레이데드는 이번 작품에서도 기대를 저버리지 않았습니다. Lone은 플레이데드 특유의 정교한 디테일과 차가운 미학을 이어가면서도, 또 한 번 새로운 감각을 불러일으키는 게임입니다.</p>
 
