--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
   <!-- 오른쪽 사이드바 -->
   <aside class="rightbar">
     <h3>Sponsored</h3>
-    <img src="ad1.png" alt="Ad 1">
+    <img src="Sh.jpeg" alt="Ad 1">
     <img src="ad3.jpg" alt="Ad 3">
     <img src="ad2.jpg" alt="Ad 2">
     <img src="ad4.jpg" alt="Ad 4">
