--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
   <aside class="rightbar">
     <h3>Sponsored</h3>
     <img src="sha.jpeg" alt="Ad 1">
-    <img src="ad3.jpg" alt="Ad 3">
+    <img src="b.jpg" alt="Ad 3">
     <img src="ad2.jpg" alt="Ad 2">
     <img src="ad4.jpg" alt="Ad 4">
   </aside>
