--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
       bottom: 0;
     }
     .rightbar h3 {
-      margin-bottom: 15px;
+      margin-bottom: 8px; /* 글씨와 첫 광고 간격 줄임 */
+      font-size: 18px;
     }
     .rightbar img {
       width: 100%;
@@ -125,12 +126,20 @@
     footer .footer-info {
       display: flex;
       justify-content: center;
+      align-items: center;
       flex-wrap: wrap;
       gap: 15px;
     }
     footer .footer-info span {
       color: #fff;
       font-size: 14px;
+      display: flex;
+      align-items: center;
+    }
+    footer .footer-info span:not(:first-child)::before {
+      content: "|";
+      margin: 0 10px;
+      color: #fff;
     }
   </style>
 </head>
@@ -190,43 +199,14 @@
 
     <!-- IGN 스타일 푸터 -->
     <footer>
-  <div class="footer-info">
-    <span>Benjamin Miller 지음</span>
-    <span>Ji-eun Lee 번역</span>
-    <span>업데이트 : 2025년 09월 12일 오전 1시 37분</span>
-    <span>게시일 : 2025년 09월 11일 오후 3시 40분</span>
+      <div class="footer-info">
+        <span>Benjamin Miller 지음</span>
+        <span>Ji-eun Lee 번역</span>
+        <span>업데이트 : 2025년 09월 12일 오전 1시 37분</span>
+        <span>게시일 : 2025년 09월 11일 오후 3시 40분</span>
+      </div>
+    </footer>
   </div>
-</footer>
-
-<style>
-  footer {
-    background: #000;
-    color: #fff;
-    text-align: center;
-    padding: 20px 10px; /* 위아래 여백 조금 넉넉하게 */
-  }
-
-  footer .footer-info {
-    display: flex;
-    justify-content: center; /* 가로 중앙 */
-    align-items: center;     /* 세로 중앙 */
-    flex-wrap: wrap;         /* 화면 좁아지면 줄 바꿈 */
-  }
-
-  footer .footer-info span {
-    display: flex;
-    align-items: center;     /* 각 항목 텍스트 세로 중앙 정렬 */
-    font-size: 14px;
-    color: #fff;
-  }
-
-  /* 첫 번째 span 제외, 나머지 앞에 | 넣기 */
-  footer .footer-info span:not(:first-child)::before {
-    content: "|";
-    margin: 0 10px; /* 양쪽 간격 */
-    color: #fff;
-  }
-</style>
 
   <!-- 오른쪽 사이드바 -->
   <aside class="rightbar">
