--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <h3>Sponsored</h3>
     <img src="sha.jpeg" alt="Ad 1">
     <img src="ff.png" alt="Ad 3">
-    <img src="ad2.jpg" alt="Ad 2">
+    <img src="b.jpg" alt="Ad 2">
     <img src="ad4.jpg" alt="Ad 4">
   </aside>
 </body>
