--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
     <h3>Sponsored</h3>
     <img src="sha.jpeg" alt="Ad 1">
     <img src="b.jpg" alt="Ad 3">
-    <img src="ff.ppg" alt="Ad 2">
-    <img src="ad4.jpg" alt="Ad 4">
+    <img src="cam.jpg" alt="Ad 2">
+    <img src="l.jpg" alt="Ad 4">
   </aside>
 </body>
 </html>
