--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
   <aside class="rightbar">
     <h3>Sponsored</h3>
     <img src="sha.jpeg" alt="Ad 1">
-    <img src="b.jpg" alt="Ad 3">
+    <img src="ff.png" alt="Ad 3">
     <img src="cam.jpg" alt="Ad 2">
     <img src="l.jpg" alt="Ad 4">
   </aside>
